--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,19 @@
 /* write your override styles here */
+html body {
+    background: gray url(../images/sketch.jpg) left;
+    background-size: auto;
+}
+body div#wall {
+    margin: 60px 40px 50px 60px;
+    width: 1020px;
+    height: 700px;
+    -moz-box-shadow: 15px 15px 47px rgb(30, 134, 134), -15px -15px 47px rgb(211, 89, 59);
+    -webkit-box-shadow: 15px 15px 47px rgb(240, 80, 160), -15px -15px 47px rgba(245, 248, 33, 0.788);
+}
+div#wall div.tag-1 {
+    position: absolute;
+    top: 10px;
+    left: 30px;
+    width: 1020px;
+    height: 700px;
+}
